change input type, add start function in JS

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
   <body>
     <div>
       <form>
-        <label for="year"></label>
-        <input id="year" type="text" placeholder="Year" />
-        <label for="month"></label>
-        <input id="month" type="text" placeholder="Month" />
-        <label for="day"></label>
-        <input id="day" type="text" placeholder="Day" />
+        <label for="dates"></label>
+        <input id="dates" type="date" />
         <button>Start</button>
       </form>
     </div>
