add restart function

--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
 
   <body>
     <div>
-      <form>
+      <h1>그날이 오면</h1>
+    </div>
+    <div>
+      <form class="dateForm">
         <label for="dates"></label>
         <input id="dates" type="date" />
-        <button>Start</button>
+        <button class="button">Start</button>
       </form>
     </div>
     <div class="eventOutput">
-      <h1>Day : Minute : Second</h1>
+      <h2 class="timeTitle">시간이 다 되었습니다.</h2>
+      <h2 class="restartTitle">재시작을 하려면 클릭하세요.</h2>
     </div>
 
     <script src="src/index.js"></script>
